--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'LogRocket GitHub Actions'
+description: 'A wrapper of LogRocket CLI to upload sourcemap.'
+author: 'Yuku Kotani'
 inputs:
   milliseconds: # change this
     required: true
