--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "logrocket-action",
+  "version": "0.1.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "LogRocket CLI in GitHub Actions",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,14 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/Monchi/logrocket-action.git"
   },
   "keywords": [
     "actions",
-    "node",
-    "setup"
+    "logrocket"
   ],
-  "author": "",
+  "author": "Yuku Kotani",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0",
